	  Thanks to navid.zamani at googlemail.com
	  http://bugs.gentoo.org/show_bug.cgi?id=296722
	- eix-sync: Add option -L for passing options to layman,
	  see http://sourceforge.net/tracker/index.php?
	  func=detail&aid=2921161&group_id=128101&atid=710611
	- "Export" EPREFIX when sourcing make.{globals,conf} so that e.g.
	  ${EPREFIX} can be used in etc/make.conf

*eix-0.19.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Let eix-remote and KEEP_VIRTUAL=true use the original
	  overlay label's (repo_name)
	- Introduce --repo-name and REPO_NAMES
	- eix-update: Treat eix-caches for the same file simultaneously.
	  This dramatically speeds up KEEP_VIRTUALS=true
	  When the first overlay accessing the file is displayed, actually
	  all overlays are handled - the later ones only print a message.
	- eix --pipe: Also accept leading "=", e.g. =sys-devel/gcc-4.4.2.
	  Also accept several packages in one line (separated by spaces).
	- Provide xml-schema for the --xml output: eix-xml.xsd
	- Rename xml-format.* and format.* into eix-xml.* and eix-db.*
	- manpage: Give some useful examples at the very beginning.
	- Fix xml-description (add description, homepage, missing_keyword)
	- Fix ./configure --disable-security (regression of 0.19.0,
	  was fixed by patch in eix-0.19.0-r1).
	- Improve tests in case of --enable-security.

*eix-0.19.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- This is a major rewrite (although hopefully not visible to the user;
	  perhaps it is slightly faster which however is hardly visible, since
	  the main bulk is the I/O governed by the kernel).
	     Visible changes:
	- Rename options:
	    --world     -> --selected-file
	    --world-set -> --selected-set
	    --world-all -> --selected
	  Introduce new options --world, --world-file, --world-set (yes, the
	  former two have now a different meaning than in <eix-0.19.0) which
	  behave like the corresponding --selected* but include @system.